--- a/index.html
+++ b/index.html
@@ -2,23 +2,14 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="https://res.cloudinary.com/djyq0eikg/image/upload/v1744874872/icon80_acgzqq.webp" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Koratech - Soluções em TI Estratégicas</title>
-
-    <meta name="description" content="Koratech oferece soluções de TI personalizadas, incluindo redes Wi-Fi corporativas, inteligência artificial e consultoria estratégica para impulsionar seus negócios." />
-
+    <meta name="description" content="Koratech: Soluções inovadoras em automação industrial e engenharia. Otimize seus processos e aumente sua produtividade conosco.">
+    <link rel="preconnect" href="https://res.cloudinary.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://res.cloudinary.com">
-
-    <link rel="preload" as="image" href="https://res.cloudinary.com/djyq0eikg/image/upload/v1744875898/banner01_cewjdy.avif">
-
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-
-    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"></noscript>
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <title>Koratech - Automação Industrial e Engenharia</title>
   </head>
   <body>
     <div id="root"></div>
